Parsing/tests_statements/_test_build/_build/parser.automaton
State 0:
compilationUnit' -> . compilationUnit [ # ]
-- On error shift to state 1
-- On LCURL shift to state 2
-- On compilationUnit shift to state 124
-- On block shift to state 125

State 1:
compilationUnit -> error . [ # ]
-- On # reduce production compilationUnit -> error 

State 2:
block -> LCURL . localVariableDeclAndStmts RCURL [ # ]
block -> LCURL . RCURL [ # ]
-- On WHILE shift to state 3
-- On VOID shift to state 9
-- On TRY shift to state 7
-- On THROW shift to state 10
-- On SYNCHRONIZED shift to state 13
-- On SWITCH shift to state 17
-- On SHORT shift to state 34
-- On SEMI shift to state 22
-- On RETURN shift to state 23
-- On RCURL shift to state 121
-- On LONG shift to state 36
-- On LCURL shift to state 8
-- On INT shift to state 37
-- On IF shift to state 26
-- On IDENTIFIER shift to state 30
-- On FOR shift to state 32
-- On FLOAT shift to state 38
-- On FINAL shift to state 39
-- On DOUBLE shift to state 40
-- On DO shift to state 65
-- On DEFAULT shift to state 66
-- On CONTINUE shift to state 68
-- On CHAR shift to state 41
-- On CASE shift to state 72
-- On BYTE shift to state 42
-- On BREAK shift to state 75
-- On BOOLEAN shift to state 43
-- On types shift to state 57
-- On statement shift to state 98
-- On selectStmt shift to state 85
-- On localVariableDeclStmt shift to state 99
-- On localVariableDeclOrStmt shift to state 100
-- On localVariableDeclAndStmts shift to state 122
-- On labelStmt shift to state 86
-- On jumpStmt shift to state 87
-- On iterStmt shift to state 88
-- On guardingStmt shift to state 89
-- On emptyStmt shift to state 90
-- On block shift to state 91

State 3:
iterStmt -> WHILE . LPAR expression RPAR statement [ WHILE VOID TRY THROW SYNCHRONIZED SWITCH SHORT SEMI RETURN RCURL LONG LCURL INT IF IDENTIFIER FOR FLOAT FINAL ELSE DOUBLE DO DEFAULT CONTINUE CHAR CASE BYTE BREAK BOOLEAN ]
-- On LPAR shift to state 4

State 4:
iterStmt -> WHILE LPAR . expression RPAR statement [ WHILE VOID TRY THROW SYNCHRONIZED SWITCH SHORT SEMI RETURN RCURL LONG LCURL INT IF IDENTIFIER FOR FLOAT FINAL ELSE DOUBLE DO DEFAULT CONTINUE CHAR CASE BYTE BREAK BOOLEAN ]
-- On expression shift to state 5
-- On RPAR reduce production expression -> 

State 5:
iterStmt -> WHILE LPAR expression . RPAR statement [ WHILE VOID TRY THROW SYNCHRONIZED SWITCH SHORT SEMI RETURN RCURL LONG LCURL INT IF IDENTIFIER FOR FLOAT FINAL ELSE DOUBLE DO DEFAULT CONTINUE CHAR CASE BYTE BREAK BOOLEAN ]
-- On RPAR shift to state 6

State 6:
iterStmt -> WHILE LPAR expression RPAR . statement [ WHILE VOID TRY THROW SYNCHRONIZED SWITCH SHORT SEMI RETURN RCURL LONG LCURL INT IF IDENTIFIER FOR FLOAT FINAL ELSE DOUBLE DO DEFAULT CONTINUE CHAR CASE BYTE BREAK BOOLEAN ]
-- On WHILE shift to state 3
-- On TRY shift to state 7
-- On THROW shift to state 10
-- On SYNCHRONIZED shift to state 13
-- On SWITCH shift to state 17
-- On SEMI shift to state 22
-- On RETURN shift to state 23
-- On LCURL shift to state 8
-- On IF shift to state 26
-- On IDENTIFIER shift to state 30
-- On FOR shift to state 32
-- On DO shift to state 65
-- On DEFAULT shift to state 66
-- On CONTINUE shift to state 68
-- On CASE shift to state 72
-- On BREAK shift to state 75
-- On statement shift to state 120
-- On selectStmt shift to state 85
-- On labelStmt shift to state 86
-- On jumpStmt shift to state 87
-- On iterStmt shift to state 88
-- On guardingStmt shift to state 89
-- On emptyStmt shift to state 90
-- On block shift to state 91

State 7:
guardingStmt -> TRY . block finally [ WHILE VOID TRY THROW SYNCHRONIZED SWITCH SHORT SEMI RETURN RCURL LONG LCURL INT IF IDENTIFIER FOR FLOAT FINAL ELSE DOUBLE DO DEFAULT CONTINUE CHAR CASE BYTE BREAK BOOLEAN ]
guardingStmt -> TRY . block catches [ WHILE VOID TRY THROW SYNCHRONIZED SWITCH SHORT SEMI RETURN RCURL LONG LCURL INT IF IDENTIFIER FOR FLOAT FINAL ELSE DOUBLE DO DEFAULT CONTINUE CHAR CASE BYTE BREAK BOOLEAN ]
guardingStmt -> TRY . block catches finally [ WHILE VOID TRY THROW SYNCHRONIZED SWITCH SHORT SEMI RETURN RCURL LONG LCURL INT IF IDENTIFIER FOR FLOAT FINAL ELSE DOUBLE DO DEFAULT CONTINUE CHAR CASE BYTE BREAK BOOLEAN ]
-- On LCURL shift to state 8
-- On block shift to state 104

State 8:
block -> LCURL . localVariableDeclAndStmts RCURL [ WHILE VOID TRY THROW SYNCHRONIZED SWITCH SHORT SEMI RETURN RCURL LONG LCURL INT IF IDENTIFIER FOR FLOAT FINALLY FINAL ELSE DOUBLE DO DEFAULT CONTINUE CHAR CATCH CASE BYTE BREAK BOOLEAN ]
block -> LCURL . RCURL [ WHILE VOID TRY THROW SYNCHRONIZED SWITCH SHORT SEMI RETURN RCURL LONG LCURL INT IF IDENTIFIER FOR FLOAT FINALLY FINAL ELSE DOUBLE DO DEFAULT CONTINUE CHAR CATCH CASE BYTE BREAK BOOLEAN ]
-- On WHILE shift to state 3
-- On VOID shift to state 9
-- On TRY shift to state 7
-- On THROW shift to state 10
-- On SYNCHRONIZED shift to state 13
-- On SWITCH shift to state 17
-- On SHORT shift to state 34
-- On SEMI shift to state 22
-- On RETURN shift to state 23
-- On RCURL shift to state 97
-- On LONG shift to state 36
-- On LCURL shift to state 8
-- On INT shift to state 37
-- On IF shift to state 26
-- On IDENTIFIER shift to state 30
-- On FOR shift to state 32
-- On FLOAT shift to state 38
-- On FINAL shift to state 39
-- On DOUBLE shift to state 40
-- On DO shift to state 65
-- On DEFAULT shift to state 66
-- On CONTINUE shift to state 68
-- On CHAR shift to state 41
-- On CASE shift to state 72
-- On BYTE shift to state 42
-- On BREAK shift to state 75
-- On BOOLEAN shift to state 43
-- On types shift to state 57
-- On statement shift to state 98
-- On selectStmt shift to state 85
-- On localVariableDeclStmt shift to state 99
-- On localVariableDeclOrStmt shift to state 100
-- On localVariableDeclAndStmts shift to state 101
-- On labelStmt shift to state 86
-- On jumpStmt shift to state 87
-- On iterStmt shift to state 88
-- On guardingStmt shift to state 89
-- On emptyStmt shift to state 90
-- On block shift to state 91

State 9:
types -> VOID . [ RPAR IDENTIFIER ]
-- On RPAR reduce production types -> VOID 
-- On IDENTIFIER reduce production types -> VOID 

State 10:
jumpStmt -> THROW . expression SEMI [ WHILE VOID TRY THROW SYNCHRONIZED SWITCH SHORT SEMI RETURN RCURL LONG LCURL INT IF IDENTIFIER FOR FLOAT FINAL ELSE DOUBLE DO DEFAULT CONTINUE CHAR CASE BYTE BREAK BOOLEAN ]
-- On expression shift to state 11
-- On SEMI reduce production expression -> 

State 11:
jumpStmt -> THROW expression . SEMI [ WHILE VOID TRY THROW SYNCHRONIZED SWITCH SHORT SEMI RETURN RCURL LONG LCURL INT IF IDENTIFIER FOR FLOAT FINAL ELSE DOUBLE DO DEFAULT CONTINUE CHAR CASE BYTE BREAK BOOLEAN ]
-- On SEMI shift to state 12

State 12:
jumpStmt -> THROW expression SEMI . [ WHILE VOID TRY THROW SYNCHRONIZED SWITCH SHORT SEMI RETURN RCURL LONG LCURL INT IF IDENTIFIER FOR FLOAT FINAL ELSE DOUBLE DO DEFAULT CONTINUE CHAR CASE BYTE BREAK BOOLEAN ]
-- On WHILE reduce production jumpStmt -> THROW expression SEMI 
-- On VOID reduce production jumpStmt -> THROW expression SEMI 
-- On TRY reduce production jumpStmt -> THROW expression SEMI 
-- On THROW reduce production jumpStmt -> THROW expression SEMI 
-- On SYNCHRONIZED reduce production jumpStmt -> THROW expression SEMI 
-- On SWITCH reduce production jumpStmt -> THROW expression SEMI 
-- On SHORT reduce production jumpStmt -> THROW expression SEMI 
-- On SEMI reduce production jumpStmt -> THROW expression SEMI 
-- On RETURN reduce production jumpStmt -> THROW expression SEMI 
-- On RCURL reduce production jumpStmt -> THROW expression SEMI 
-- On LONG reduce production jumpStmt -> THROW expression SEMI 
-- On LCURL reduce production jumpStmt -> THROW expression SEMI 
-- On INT reduce production jumpStmt -> THROW expression SEMI 
-- On IF reduce production jumpStmt -> THROW expression SEMI 
-- On IDENTIFIER reduce production jumpStmt -> THROW expression SEMI 
-- On FOR reduce production jumpStmt -> THROW expression SEMI 
-- On FLOAT reduce production jumpStmt -> THROW expression SEMI 
-- On FINAL reduce production jumpStmt -> THROW expression SEMI 
-- On ELSE reduce production jumpStmt -> THROW expression SEMI 
-- On DOUBLE reduce production jumpStmt -> THROW expression SEMI 
-- On DO reduce production jumpStmt -> THROW expression SEMI 
-- On DEFAULT reduce production jumpStmt -> THROW expression SEMI 
-- On CONTINUE reduce production jumpStmt -> THROW expression SEMI 
-- On CHAR reduce production jumpStmt -> THROW expression SEMI 
-- On CASE reduce production jumpStmt -> THROW expression SEMI 
-- On BYTE reduce production jumpStmt -> THROW expression SEMI 
-- On BREAK reduce production jumpStmt -> THROW expression SEMI 
-- On BOOLEAN reduce production jumpStmt -> THROW expression SEMI 

State 13:
guardingStmt -> SYNCHRONIZED . LPAR expression RPAR statement [ WHILE VOID TRY THROW SYNCHRONIZED SWITCH SHORT SEMI RETURN RCURL LONG LCURL INT IF IDENTIFIER FOR FLOAT FINAL ELSE DOUBLE DO DEFAULT CONTINUE CHAR CASE BYTE BREAK BOOLEAN ]
-- On LPAR shift to state 14

State 14:
guardingStmt -> SYNCHRONIZED LPAR . expression RPAR statement [ WHILE VOID TRY THROW SYNCHRONIZED SWITCH SHORT SEMI RETURN RCURL LONG LCURL INT IF IDENTIFIER FOR FLOAT FINAL ELSE DOUBLE DO DEFAULT CONTINUE CHAR CASE BYTE BREAK BOOLEAN ]
-- On expression shift to state 15
-- On RPAR reduce production expression -> 

State 15:
guardingStmt -> SYNCHRONIZED LPAR expression . RPAR statement [ WHILE VOID TRY THROW SYNCHRONIZED SWITCH SHORT SEMI RETURN RCURL LONG LCURL INT IF IDENTIFIER FOR FLOAT FINAL ELSE DOUBLE DO DEFAULT CONTINUE CHAR CASE BYTE BREAK BOOLEAN ]
-- On RPAR shift to state 16

State 16:
guardingStmt -> SYNCHRONIZED LPAR expression RPAR . statement [ WHILE VOID TRY THROW SYNCHRONIZED SWITCH SHORT SEMI RETURN RCURL LONG LCURL INT IF IDENTIFIER FOR FLOAT FINAL ELSE DOUBLE DO DEFAULT CONTINUE CHAR CASE BYTE BREAK BOOLEAN ]
-- On WHILE shift to state 3
-- On TRY shift to state 7
-- On THROW shift to state 10
-- On SYNCHRONIZED shift to state 13
-- On SWITCH shift to state 17
-- On SEMI shift to state 22
-- On RETURN shift to state 23
-- On LCURL shift to state 8
-- On IF shift to state 26
-- On IDENTIFIER shift to state 30
-- On FOR shift to state 32
-- On DO shift to state 65
-- On DEFAULT shift to state 66
-- On CONTINUE shift to state 68
-- On CASE shift to state 72
-- On BREAK shift to state 75
-- On statement shift to state 96
-- On selectStmt shift to state 85
-- On labelStmt shift to state 86
-- On jumpStmt shift to state 87
-- On iterStmt shift to state 88
-- On guardingStmt shift to state 89
-- On emptyStmt shift to state 90
-- On block shift to state 91

State 17:
selectStmt -> SWITCH . LPAR expression RPAR block [ WHILE VOID TRY THROW SYNCHRONIZED SWITCH SHORT SEMI RETURN RCURL LONG LCURL INT IF IDENTIFIER FOR FLOAT FINAL ELSE DOUBLE DO DEFAULT CONTINUE CHAR CASE BYTE BREAK BOOLEAN ]
-- On LPAR shift to state 18

State 18:
selectStmt -> SWITCH LPAR . expression RPAR block [ WHILE VOID TRY THROW SYNCHRONIZED SWITCH SHORT SEMI RETURN RCURL LONG LCURL INT IF IDENTIFIER FOR FLOAT FINAL ELSE DOUBLE DO DEFAULT CONTINUE CHAR CASE BYTE BREAK BOOLEAN ]
-- On expression shift to state 19
-- On RPAR reduce production expression -> 

State 19:
selectStmt -> SWITCH LPAR expression . RPAR block [ WHILE VOID TRY THROW SYNCHRONIZED SWITCH SHORT SEMI RETURN RCURL LONG LCURL INT IF IDENTIFIER FOR FLOAT FINAL ELSE DOUBLE DO DEFAULT CONTINUE CHAR CASE BYTE BREAK BOOLEAN ]
-- On RPAR shift to state 20

State 20:
selectStmt -> SWITCH LPAR expression RPAR . block [ WHILE VOID TRY THROW SYNCHRONIZED SWITCH SHORT SEMI RETURN RCURL LONG LCURL INT IF IDENTIFIER FOR FLOAT FINAL ELSE DOUBLE DO DEFAULT CONTINUE CHAR CASE BYTE BREAK BOOLEAN ]
-- On LCURL shift to state 8
-- On block shift to state 21

State 21:
selectStmt -> SWITCH LPAR expression RPAR block . [ WHILE VOID TRY THROW SYNCHRONIZED SWITCH SHORT SEMI RETURN RCURL LONG LCURL INT IF IDENTIFIER FOR FLOAT FINAL ELSE DOUBLE DO DEFAULT CONTINUE CHAR CASE BYTE BREAK BOOLEAN ]
-- On WHILE reduce production selectStmt -> SWITCH LPAR expression RPAR block 
-- On VOID reduce production selectStmt -> SWITCH LPAR expression RPAR block 
-- On TRY reduce production selectStmt -> SWITCH LPAR expression RPAR block 
-- On THROW reduce production selectStmt -> SWITCH LPAR expression RPAR block 
-- On SYNCHRONIZED reduce production selectStmt -> SWITCH LPAR expression RPAR block 
-- On SWITCH reduce production selectStmt -> SWITCH LPAR expression RPAR block 
-- On SHORT reduce production selectStmt -> SWITCH LPAR expression RPAR block 
-- On SEMI reduce production selectStmt -> SWITCH LPAR expression RPAR block 
-- On RETURN reduce production selectStmt -> SWITCH LPAR expression RPAR block 
-- On RCURL reduce production selectStmt -> SWITCH LPAR expression RPAR block 
-- On LONG reduce production selectStmt -> SWITCH LPAR expression RPAR block 
-- On LCURL reduce production selectStmt -> SWITCH LPAR expression RPAR block 
-- On INT reduce production selectStmt -> SWITCH LPAR expression RPAR block 
-- On IF reduce production selectStmt -> SWITCH LPAR expression RPAR block 
-- On IDENTIFIER reduce production selectStmt -> SWITCH LPAR expression RPAR block 
-- On FOR reduce production selectStmt -> SWITCH LPAR expression RPAR block 
-- On FLOAT reduce production selectStmt -> SWITCH LPAR expression RPAR block 
-- On FINAL reduce production selectStmt -> SWITCH LPAR expression RPAR block 
-- On ELSE reduce production selectStmt -> SWITCH LPAR expression RPAR block 
-- On DOUBLE reduce production selectStmt -> SWITCH LPAR expression RPAR block 
-- On DO reduce production selectStmt -> SWITCH LPAR expression RPAR block 
-- On DEFAULT reduce production selectStmt -> SWITCH LPAR expression RPAR block 
-- On CONTINUE reduce production selectStmt -> SWITCH LPAR expression RPAR block 
-- On CHAR reduce production selectStmt -> SWITCH LPAR expression RPAR block 
-- On CASE reduce production selectStmt -> SWITCH LPAR expression RPAR block 
-- On BYTE reduce production selectStmt -> SWITCH LPAR expression RPAR block 
-- On BREAK reduce production selectStmt -> SWITCH LPAR expression RPAR block 
-- On BOOLEAN reduce production selectStmt -> SWITCH LPAR expression RPAR block 

State 22:
emptyStmt -> SEMI . [ WHILE VOID TRY THROW SYNCHRONIZED SWITCH SHORT SEMI RETURN RCURL LONG LCURL INT IF IDENTIFIER FOR FLOAT FINAL ELSE DOUBLE DO DEFAULT CONTINUE CHAR CASE BYTE BREAK BOOLEAN ]
-- On WHILE reduce production emptyStmt -> SEMI 
-- On VOID reduce production emptyStmt -> SEMI 
-- On TRY reduce production emptyStmt -> SEMI 
-- On THROW reduce production emptyStmt -> SEMI 
-- On SYNCHRONIZED reduce production emptyStmt -> SEMI 
-- On SWITCH reduce production emptyStmt -> SEMI 
-- On SHORT reduce production emptyStmt -> SEMI 
-- On SEMI reduce production emptyStmt -> SEMI 
-- On RETURN reduce production emptyStmt -> SEMI 
-- On RCURL reduce production emptyStmt -> SEMI 
-- On LONG reduce production emptyStmt -> SEMI 
-- On LCURL reduce production emptyStmt -> SEMI 
-- On INT reduce production emptyStmt -> SEMI 
-- On IF reduce production emptyStmt -> SEMI 
-- On IDENTIFIER reduce production emptyStmt -> SEMI 
-- On FOR reduce production emptyStmt -> SEMI 
-- On FLOAT reduce production emptyStmt -> SEMI 
-- On FINAL reduce production emptyStmt -> SEMI 
-- On ELSE reduce production emptyStmt -> SEMI 
-- On DOUBLE reduce production emptyStmt -> SEMI 
-- On DO reduce production emptyStmt -> SEMI 
-- On DEFAULT reduce production emptyStmt -> SEMI 
-- On CONTINUE reduce production emptyStmt -> SEMI 
-- On CHAR reduce production emptyStmt -> SEMI 
-- On CASE reduce production emptyStmt -> SEMI 
-- On BYTE reduce production emptyStmt -> SEMI 
-- On BREAK reduce production emptyStmt -> SEMI 
-- On BOOLEAN reduce production emptyStmt -> SEMI 

State 23:
jumpStmt -> RETURN . expression SEMI [ WHILE VOID TRY THROW SYNCHRONIZED SWITCH SHORT SEMI RETURN RCURL LONG LCURL INT IF IDENTIFIER FOR FLOAT FINAL ELSE DOUBLE DO DEFAULT CONTINUE CHAR CASE BYTE BREAK BOOLEAN ]
-- On expression shift to state 24
-- On SEMI reduce production expression -> 

State 24:
jumpStmt -> RETURN expression . SEMI [ WHILE VOID TRY THROW SYNCHRONIZED SWITCH SHORT SEMI RETURN RCURL LONG LCURL INT IF IDENTIFIER FOR FLOAT FINAL ELSE DOUBLE DO DEFAULT CONTINUE CHAR CASE BYTE BREAK BOOLEAN ]
-- On SEMI shift to state 25

State 25:
jumpStmt -> RETURN expression SEMI . [ WHILE VOID TRY THROW SYNCHRONIZED SWITCH SHORT SEMI RETURN RCURL LONG LCURL INT IF IDENTIFIER FOR FLOAT FINAL ELSE DOUBLE DO DEFAULT CONTINUE CHAR CASE BYTE BREAK BOOLEAN ]
-- On WHILE reduce production jumpStmt -> RETURN expression SEMI 
-- On VOID reduce production jumpStmt -> RETURN expression SEMI 
-- On TRY reduce production jumpStmt -> RETURN expression SEMI 
-- On THROW reduce production jumpStmt -> RETURN expression SEMI 
-- On SYNCHRONIZED reduce production jumpStmt -> RETURN expression SEMI 
-- On SWITCH reduce production jumpStmt -> RETURN expression SEMI 
-- On SHORT reduce production jumpStmt -> RETURN expression SEMI 
-- On SEMI reduce production jumpStmt -> RETURN expression SEMI 
-- On RETURN reduce production jumpStmt -> RETURN expression SEMI 
-- On RCURL reduce production jumpStmt -> RETURN expression SEMI 
-- On LONG reduce production jumpStmt -> RETURN expression SEMI 
-- On LCURL reduce production jumpStmt -> RETURN expression SEMI 
-- On INT reduce production jumpStmt -> RETURN expression SEMI 
-- On IF reduce production jumpStmt -> RETURN expression SEMI 
-- On IDENTIFIER reduce production jumpStmt -> RETURN expression SEMI 
-- On FOR reduce production jumpStmt -> RETURN expression SEMI 
-- On FLOAT reduce production jumpStmt -> RETURN expression SEMI 
-- On FINAL reduce production jumpStmt -> RETURN expression SEMI 
-- On ELSE reduce production jumpStmt -> RETURN expression SEMI 
-- On DOUBLE reduce production jumpStmt -> RETURN expression SEMI 
-- On DO reduce production jumpStmt -> RETURN expression SEMI 
-- On DEFAULT reduce production jumpStmt -> RETURN expression SEMI 
-- On CONTINUE reduce production jumpStmt -> RETURN expression SEMI 
-- On CHAR reduce production jumpStmt -> RETURN expression SEMI 
-- On CASE reduce production jumpStmt -> RETURN expression SEMI 
-- On BYTE reduce production jumpStmt -> RETURN expression SEMI 
-- On BREAK reduce production jumpStmt -> RETURN expression SEMI 
-- On BOOLEAN reduce production jumpStmt -> RETURN expression SEMI 

State 26:
selectStmt -> IF . LPAR expression RPAR statement [ WHILE VOID TRY THROW SYNCHRONIZED SWITCH SHORT SEMI RETURN RCURL LONG LCURL INT IF IDENTIFIER FOR FLOAT FINAL ELSE DOUBLE DO DEFAULT CONTINUE CHAR CASE BYTE BREAK BOOLEAN ]
selectStmt -> IF . LPAR expression RPAR statement ELSE statement [ WHILE VOID TRY THROW SYNCHRONIZED SWITCH SHORT SEMI RETURN RCURL LONG LCURL INT IF IDENTIFIER FOR FLOAT FINAL ELSE DOUBLE DO DEFAULT CONTINUE CHAR CASE BYTE BREAK BOOLEAN ]
-- On LPAR shift to state 27

State 27:
selectStmt -> IF LPAR . expression RPAR statement [ WHILE VOID TRY THROW SYNCHRONIZED SWITCH SHORT SEMI RETURN RCURL LONG LCURL INT IF IDENTIFIER FOR FLOAT FINAL ELSE DOUBLE DO DEFAULT CONTINUE CHAR CASE BYTE BREAK BOOLEAN ]
selectStmt -> IF LPAR . expression RPAR statement ELSE statement [ WHILE VOID TRY THROW SYNCHRONIZED SWITCH SHORT SEMI RETURN RCURL LONG LCURL INT IF IDENTIFIER FOR FLOAT FINAL ELSE DOUBLE DO DEFAULT CONTINUE CHAR CASE BYTE BREAK BOOLEAN ]
-- On expression shift to state 28
-- On RPAR reduce production expression -> 

State 28:
selectStmt -> IF LPAR expression . RPAR statement [ WHILE VOID TRY THROW SYNCHRONIZED SWITCH SHORT SEMI RETURN RCURL LONG LCURL INT IF IDENTIFIER FOR FLOAT FINAL ELSE DOUBLE DO DEFAULT CONTINUE CHAR CASE BYTE BREAK BOOLEAN ]
selectStmt -> IF LPAR expression . RPAR statement ELSE statement [ WHILE VOID TRY THROW SYNCHRONIZED SWITCH SHORT SEMI RETURN RCURL LONG LCURL INT IF IDENTIFIER FOR FLOAT FINAL ELSE DOUBLE DO DEFAULT CONTINUE CHAR CASE BYTE BREAK BOOLEAN ]
-- On RPAR shift to state 29

State 29:
selectStmt -> IF LPAR expression RPAR . statement [ WHILE VOID TRY THROW SYNCHRONIZED SWITCH SHORT SEMI RETURN RCURL LONG LCURL INT IF IDENTIFIER FOR FLOAT FINAL ELSE DOUBLE DO DEFAULT CONTINUE CHAR CASE BYTE BREAK BOOLEAN ]
selectStmt -> IF LPAR expression RPAR . statement ELSE statement [ WHILE VOID TRY THROW SYNCHRONIZED SWITCH SHORT SEMI RETURN RCURL LONG LCURL INT IF IDENTIFIER FOR FLOAT FINAL ELSE DOUBLE DO DEFAULT CONTINUE CHAR CASE BYTE BREAK BOOLEAN ]
-- On WHILE shift to state 3
-- On TRY shift to state 7
-- On THROW shift to state 10
-- On SYNCHRONIZED shift to state 13
-- On SWITCH shift to state 17
-- On SEMI shift to state 22
-- On RETURN shift to state 23
-- On LCURL shift to state 8
-- On IF shift to state 26
-- On IDENTIFIER shift to state 30
-- On FOR shift to state 32
-- On DO shift to state 65
-- On DEFAULT shift to state 66
-- On CONTINUE shift to state 68
-- On CASE shift to state 72
-- On BREAK shift to state 75
-- On statement shift to state 93
-- On selectStmt shift to state 85
-- On labelStmt shift to state 86
-- On jumpStmt shift to state 87
-- On iterStmt shift to state 88
-- On guardingStmt shift to state 89
-- On emptyStmt shift to state 90
-- On block shift to state 91

State 30:
labelStmt -> IDENTIFIER . COL [ WHILE VOID TRY THROW SYNCHRONIZED SWITCH SHORT SEMI RETURN RCURL LONG LCURL INT IF IDENTIFIER FOR FLOAT FINAL ELSE DOUBLE DO DEFAULT CONTINUE CHAR CASE BYTE BREAK BOOLEAN ]
-- On COL shift to state 31
